<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:background="@color/colorWhite"
    android:gravity="center">

    <TextView
        android:id="@+id/txv_custom_error_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/text_error_title"
        android:textColor="@color/colorWord_2392FF"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/txv_custom_error_activity_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_custom_error_activity_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:text="@string/text_error_content"
        android:textColor="#010101"
        android:textSize="@dimen/_13sdp" />

    <ImageView
        android:id="@+id/imv_custom_error_activity_icon"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_below="@+id/txv_custom_error_activity_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:contentDescription="string/todo" />

    <LinearLayout
        android:id="@+id/lnl_custom_error_activity_try_again"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@+id/imv_custom_error_activity_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@drawable/bg_error_activity"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24.0dip"
            android:layout_height="24.0dip"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="string/todo"
            android:src="@drawable/ic_load"
            app:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50.0dip"
            android:text="@string/try_again"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_custom_error_activity_send_feedback"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@+id/lnl_custom_error_activity_try_again"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24.0dip"
        android:layout_marginTop="24.0dip"
        android:background="@drawable/bg_error_activity"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24.0dip"
            android:layout_height="24.0dip"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="string/todo"
            android:src="@drawable/ic_dots"
            app:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50.0dip"
            android:text="@string/send_feedback"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
</RelativeLayout>