<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnl_dialog_rate_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/_15sdp"
    android:paddingBottom="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/bg_top_rate_app" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txv_dialog_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/rate_do_you_like_this_app"
        android:textColor="@color/black"
        android:textSize="24.0dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txv_dialog_rate_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/rate_content_rate_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="7">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_one_star"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_start_selected"
                android:text="@string/image"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_two_star"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_start_selected"
                android:text="@string/image"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_three_star"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_start_selected"
                android:text="@string/image"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_four_star"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_star_nomal"
                android:text="@string/image"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_five_star"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_star_nomal"
                android:text="@string/image"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>

